--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <div class="role">Data Analytics · Data Engineering · AI/ML</div>
 
         <p class="blurb">
-          I build decision-ready analytics and ML systems - clean data, reliable metrics,
-          and models you can actually trust on a real day.
+          I build decision-ready analytics and ML systems - clean data, reliable metrics,  and models you can actually trust on a real day.
         </p>
 
         <div class="ctaRow">
@@ -88,11 +87,11 @@
             <div class="proofMeta">trusted datasets + dashboards</div>
           </div>
 
-          <div class="proofCard">
-            <div class="proofValue">Live apps</div>
-            <div class="proofLabel">ML projects deployed</div>
-            <div class="proofMeta">recruiters can click & test</div>
-          </div>
+         <div class="proofCard">
+  <div class="proofValue">End-to-end projects</div>
+  <div class="proofLabel">from data → dashboards → decisions</div>
+  <div class="proofMeta">built to be clear, reliable, usable</div>
+</div>
         </div>
       </section>
 
