--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
   <title>Aishwarya Gurrala Muni | Portfolio</title>
   <meta name="description" content="Portfolio of Aishwarya Gurrala Muni — Data Analytics, Data Engineering, and AI/ML projects."/>
   <link rel="stylesheet" href="assets/style.css"/>
+
+
+
+  <!-- Primary Meta Tags -->
+<meta name="title" content="Aishwarya GM | Portfolio">
+<meta name="description" content="Data analytics & data engineering projects: dashboards, pipelines, ML case studies.">
+
+<!-- Open Graph / LinkedIn -->
+<meta property="og:title" content="Aishwarya GM | Portfolio">
+<meta property="og:description" content="Data analytics & data engineering projects: dashboards, pipelines, ML case studies.">
+<meta property="og:image" content="https://aishwarya-gurrala.github.io/assets/og-image.png">
+<meta property="og:url" content="https://aishwarya-gurrala.github.io/">
+<meta property="og:type" content="website">
+
+<!-- Twitter (optional, but good) -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Aishwarya GM | Portfolio">
+<meta name="twitter:description" content="Data analytics & data engineering projects: dashboards, pipelines, ML case studies.">
+<meta name="twitter:image" content="https://aishwarya-gurrala.github.io/assets/og-image.png">
+
 </head>
 
 <body>
